Added a limit to the number of films that can be recommended.

--- a/projectparttwo.ipynb
+++ b/projectparttwo.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -420,54 +420,54 @@
      "text": [
       "\n",
       "Iteration 1:\n",
-      "User 1 recommendations: [81132, 6902, 71999, 26701, 32031]\n",
-      "User 2 recommendations: [6902, 81132, 32031, 71999, 85261]\n",
-      "User 3 recommendations: [6902, 81132, 32031, 148775, 164226]\n",
-      "User 4 recommendations: [81132, 6902, 71999, 148775, 26701]\n",
-      "User 5 recommendations: [81132, 32031, 81847, 6902, 78637]\n",
-      "Group recommendations: [81132, 6902, 32031, 71999, 26701, 148775, 85261, 164226, 81847, 78637]\n",
-      "Satisfaction scores: {1: 0.5, 2: 0.5, 3: 0.5, 4: 0.5, 5: 0.5}\n",
+      "User 3 recommendations: ['Interstate 60 (2002)', 'Rubber (2010)', 'Robots (2005)', 'Wizards of Waverly Place: The Movie (2009)', 'Maximum Ride (2016)']\n",
+      "User 4 recommendations: ['Rubber (2010)', 'Interstate 60 (2002)', 'Aelita: The Queen of Mars (Aelita) (1924)', 'Wizards of Waverly Place: The Movie (2009)', 'Patlabor: The Movie (Kidô keisatsu patorebâ: The Movie) (1989)']\n",
+      "User 1 recommendations: ['Rubber (2010)', 'Interstate 60 (2002)', 'Aelita: The Queen of Mars (Aelita) (1924)', 'Patlabor: The Movie (Kidô keisatsu patorebâ: The Movie) (1989)', 'Robots (2005)']\n",
+      "User 33 recommendations: ['Rubber (2010)', 'Interstate 60 (2002)', 'Aelita: The Queen of Mars (Aelita) (1924)', 'Robots (2005)', 'Maximum Ride (2016)']\n",
+      "User 21 recommendations: ['Rubber (2010)', 'Robots (2005)', 'Interstate 60 (2002)', 'Aelita: The Queen of Mars (Aelita) (1924)', 'Mars Needs Moms (2011)']\n",
+      "Group recommendations: ['Interstate 60 (2002)', 'Rubber (2010)', 'Robots (2005)', 'Aelita: The Queen of Mars (Aelita) (1924)', 'Wizards of Waverly Place: The Movie (2009)']\n",
+      "Satisfaction scores: {3: 0.5, 4: 0.5, 1: 0.5, 33: 0.5, 21: 0.5}\n",
       "\n",
       "Iteration 2:\n",
-      "User 1 recommendations: [164226, 2367, 148775, 56152, 85261]\n",
-      "User 2 recommendations: [148775, 60684, 81847, 2367, 164226]\n",
-      "User 3 recommendations: [71999, 26701, 26590, 117646, 72165]\n",
-      "User 4 recommendations: [2367, 32031, 164226, 79132, 130520]\n",
-      "User 5 recommendations: [98243, 58105, 85261, 71745, 71999]\n",
-      "Group recommendations: [164226, 2367, 148775, 85261, 71999, 56152, 60684, 81847, 26701, 26590, 117646, 72165, 32031, 79132, 130520, 98243, 58105, 71745]\n",
-      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n",
+      "User 3 recommendations: ['Aelita: The Queen of Mars (Aelita) (1924)', 'Patlabor: The Movie (Kidô keisatsu patorebâ: The Movie) (1989)', 'G.I. Joe: The Movie (1987)', 'Dragonheart 2: A New Beginning (2000)', \"Cirque du Freak: The Vampire's Assistant (2009)\"]\n",
+      "User 4 recommendations: ['King Kong (1976)', 'Robots (2005)', 'Maximum Ride (2016)', 'Inception (2010)', 'Home (2015)']\n",
+      "User 1 recommendations: ['Maximum Ride (2016)', 'King Kong (1976)', 'Wizards of Waverly Place: The Movie (2009)', 'Enchanted (2007)', 'Mars Needs Moms (2011)']\n",
+      "User 33 recommendations: ['Patlabor: The Movie (Kidô keisatsu patorebâ: The Movie) (1989)', 'King Kong (1976)', 'Wizards of Waverly Place: The Movie (2009)', \"Cirque du Freak: The Vampire's Assistant (2009)\", 'Pokémon: The First Movie (1998)']\n",
+      "User 21 recommendations: ['Tangled (2010)', 'Maximum Ride (2016)', 'Wizards of Waverly Place: The Movie (2009)', 'Beauty and the Beast (1991)', 'Watchmen (2009)']\n",
+      "Group recommendations: ['King Kong (1976)', 'Maximum Ride (2016)', 'Wizards of Waverly Place: The Movie (2009)', 'Patlabor: The Movie (Kidô keisatsu patorebâ: The Movie) (1989)', \"Cirque du Freak: The Vampire's Assistant (2009)\"]\n",
+      "Satisfaction scores: {3: 0.0, 4: 0.0, 1: 1.0, 33: 1.0, 21: 0.0}\n",
       "\n",
       "Iteration 3:\n",
-      "User 1 recommendations: [72165, 27683, 79132, 26590, 1907]\n",
-      "User 2 recommendations: [5882, 595, 631, 78499, 56152]\n",
-      "User 3 recommendations: [673, 2617, 36509, 198, 104875]\n",
-      "User 4 recommendations: [116941, 631, 43932, 2092, 8830]\n",
-      "User 5 recommendations: [83349, 56152, 78499, 79132, 30793]\n",
-      "Group recommendations: [79132, 631, 78499, 56152, 72165, 27683, 26590, 1907, 5882, 595, 673, 2617, 36509, 198, 104875, 116941, 43932, 2092, 8830, 83349, 30793]\n",
-      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n",
+      "User 3 recommendations: ['Space Jam (1996)', 'Mummy, The (1999)', 'Cave, The (2005)', 'Strange Days (1995)', 'History of Future Folk, The (2012)']\n",
+      "User 4 recommendations: ['Jetsons: The Movie (1990)', 'All Dogs Go to Heaven 2 (1996)', 'Pulse (2006)', 'Return of Jafar, The (1994)', 'Anacondas: The Hunt for the Blood Orchid (2004)']\n",
+      "User 1 recommendations: [\"Cirque du Freak: The Vampire's Assistant (2009)\", 'Tremors 4: The Legend Begins (2004)', 'Inception (2010)', 'G.I. Joe: The Movie (1987)', 'Mulan (1998)']\n",
+      "User 33 recommendations: ['Mars Needs Moms (2011)', 'Super Mario Bros. (1993)', 'Tremors 4: The Legend Begins (2004)', 'Mulan (1998)', 'Laputa: Castle in the Sky (Tenkû no shiro Rapyuta) (1986)']\n",
+      "User 21 recommendations: ['Patlabor: The Movie (Kidô keisatsu patorebâ: The Movie) (1989)', 'Treasure Planet (2002)', 'King Kong (1976)', 'Super Mario Bros. (1993)', 'History of Future Folk, The (2012)']\n",
+      "Group recommendations: ['History of Future Folk, The (2012)', 'Super Mario Bros. (1993)', 'Space Jam (1996)', 'Mummy, The (1999)', 'Cave, The (2005)']\n",
+      "Satisfaction scores: {3: 0.5, 4: 0.0, 1: 0.5, 33: 0.5, 21: 0.0}\n",
       "\n",
       "Iteration 4:\n",
-      "User 1 recommendations: [104875, 6350, 36509, 631, 130520]\n",
-      "User 2 recommendations: [76093, 8965, 27155, 117646, 78637]\n",
-      "User 3 recommendations: [116941, 79132, 27155, 43932, 3054]\n",
-      "User 4 recommendations: [72165, 56152, 104875, 27683, 198]\n",
-      "User 5 recommendations: [631, 47124, 1907, 8965, 2092]\n",
-      "Group recommendations: [104875, 631, 8965, 27155, 6350, 36509, 130520, 76093, 117646, 78637, 116941, 79132, 43932, 3054, 72165, 56152, 27683, 198, 47124, 1907, 2092]\n",
-      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n",
+      "User 3 recommendations: ['Jetsons: The Movie (1990)', 'Inception (2010)', 'Batman/Superman Movie, The (1998)', 'Pulse (2006)', 'Pokémon: The First Movie (1998)']\n",
+      "User 4 recommendations: [\"Cirque du Freak: The Vampire's Assistant (2009)\", 'Enchanted (2007)', 'History of Future Folk, The (2012)', 'Tremors 4: The Legend Begins (2004)', 'Strange Days (1995)']\n",
+      "User 1 recommendations: ['History of Future Folk, The (2012)', 'Laputa: Castle in the Sky (Tenkû no shiro Rapyuta) (1986)', 'Cave, The (2005)', 'All Dogs Go to Heaven 2 (1996)', 'Home (2015)']\n",
+      "User 33 recommendations: ['Cave, The (2005)', 'Anacondas: The Hunt for the Blood Orchid (2004)', 'Home (2015)', 'Mummy, The (1999)', 'G.I. Joe: The Movie (1987)']\n",
+      "User 21 recommendations: ['Batman/Superman Movie, The (1998)', 'G.I. Joe: The Movie (1987)', 'Honey, I Shrunk the Kids (1989)', 'Meet Dave (2008)', 'Spiderwick Chronicles, The (2008)']\n",
+      "Group recommendations: ['Batman/Superman Movie, The (1998)', 'History of Future Folk, The (2012)', 'G.I. Joe: The Movie (1987)', 'Cave, The (2005)', 'Home (2015)']\n",
+      "Satisfaction scores: {3: 0.0, 4: 0.0, 1: 1.0, 33: 1.0, 21: 0.0}\n",
       "\n",
       "Iteration 5:\n",
-      "User 1 recommendations: [546, 2092, 116941, 43932, 3054]\n",
-      "User 2 recommendations: [98243, 3054, 6350, 26701, 47124]\n",
-      "User 3 recommendations: [85261, 2367, 546, 6350, 8830]\n",
-      "User 4 recommendations: [85261, 2054, 26590, 2617, 36509]\n",
-      "User 5 recommendations: [76093, 117646, 106696, 4306, 62999]\n",
-      "Group recommendations: [546, 3054, 6350, 85261, 2092, 116941, 43932, 98243, 26701, 47124, 2367, 8830, 2054, 26590, 2617, 36509, 76093, 117646, 106696, 4306, 62999]\n",
-      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n"
+      "User 3 recommendations: ['Mars Needs Moms (2011)', 'King Kong (1976)', 'Super Mario Bros. (1993)', 'Laputa: Castle in the Sky (Tenkû no shiro Rapyuta) (1986)', 'Anacondas: The Hunt for the Blood Orchid (2004)']\n",
+      "User 4 recommendations: ['Mars Needs Moms (2011)', 'Honey, I Shrunk the Kids (1989)', 'G.I. Joe: The Movie (1987)', 'Mummy, The (1999)', 'Cave, The (2005)']\n",
+      "User 1 recommendations: ['Super Mario Bros. (1993)', 'Return of Jafar, The (1994)', 'Jetsons: The Movie (1990)', 'Pulse (2006)', 'Pokémon: The First Movie (1998)']\n",
+      "User 33 recommendations: ['Space Jam (1996)', 'Inception (2010)', 'All Dogs Go to Heaven 2 (1996)', 'Batman/Superman Movie, The (1998)', 'Enchanted (2007)']\n",
+      "User 21 recommendations: ['Laputa: Castle in the Sky (Tenkû no shiro Rapyuta) (1986)', 'Pokémon: The First Movie (1998)', 'Strange Days (1995)', 'Where the Wild Things Are (2009)', 'Polar Express, The (2004)']\n",
+      "Group recommendations: ['Mars Needs Moms (2011)', 'Laputa: Castle in the Sky (Tenkû no shiro Rapyuta) (1986)', 'Super Mario Bros. (1993)', 'Pokémon: The First Movie (1998)', 'King Kong (1976)']\n",
+      "Satisfaction scores: {3: 0.5, 4: 0.0, 1: 0.5, 33: 0.5, 21: 0.0}\n"
      ]
     }
    ],
    "source": [
-    "group_users = [1, 2, 3, 4, 5]\n",
+    "group_users = [3, 4, 1, 33, 21]\n",
     "\n",
     "# Satisfaction scores for the users (initially all unsatisfied)\n",
     "satisfaction_scores = {user: 0.0 for user in group_users}\n",
@@ -510,11 +510,15 @@
     "    for user, recommendations in user_recommendations.items():\n",
     "        weight = weights[user]\n",
     "        for movie_id in recommendations:\n",
-    "            recommendation_scores[movie_id] += weight\n",
+    "            recommendation_scores[movie_id] += weight # / (rank +1)\n",
     "    # Sort movies by aggregated score\n",
     "    sorted_recommendations = sorted(recommendation_scores.items(), key=lambda x: -x[1])\n",
     "    return [movie[0] for movie in sorted_recommendations]\n",
     "\n",
+    "# Function to det movies' names\n",
+    "def get_movie_title(movie_id):\n",
+    "    title = movies[movies['movieId'] == movie_id]['title']\n",
+    "    return title.values[0] if not title.empty else \"Unknown\"\n",
     "\n",
     "# Function to simulate multiple iterations with dynamic recommendations\n",
     "num_iterations = 5\n",
@@ -525,14 +529,17 @@
     "    user_recommendations = {}\n",
     "    for user in group_users:\n",
     "        user_recommendations[user] = recommend_for_user(user)\n",
-    "        print(f\"User {user} recommendations: {user_recommendations[user]}\")\n",
+    "        movie_titles = [get_movie_title(movie_id) for movie_id in user_recommendations[user]]\n",
+    "        print(f\"User {user} recommendations: {movie_titles}\")\n",
     "    \n",
     "    # Calculate weights for group aggregation\n",
     "    weights = {user: 1.0 + (1.0 - satisfaction_scores[user]) for user in group_users}\n",
     "    \n",
     "    # Group recommendations\n",
     "    group_recommendations = aggregate_group_recommendations(user_recommendations, weights)\n",
-    "    print(f\"Group recommendations: {group_recommendations}\")\n",
+    "    group_recommendations = group_recommendations[:5]\n",
+    "    group_movie_titles = [get_movie_title(movie_id) for movie_id in group_recommendations]\n",
+    "    print(f\"Group recommendations: {group_movie_titles}\")\n",
     "    \n",
     "    # Evaluate satisfaction scores\n",
     "    for user in group_users:\n",
@@ -692,7 +699,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "recsys",
+   "display_name": "bbthti",
    "language": "python",
    "name": "python3"
   },
@@ -706,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
