--- a/projectparttwo.ipynb
+++ b/projectparttwo.ipynb
@@ -21,19 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Iteration 1:\n",
+      "User 45 recommendations: ['Shawshank Redemption, The (1994)', \"Schindler's List (1993)\", 'Seven (a.k.a. Se7en) (1995)', 'Lord of the Rings: The Return of the King, The (2003)', 'Fargo (1996)']\n",
+      "User 11 recommendations: ['Pulp Fiction (1994)', 'Matrix, The (1999)', \"Schindler's List (1993)\", 'Star Wars: Episode IV - A New Hope (1977)', 'Seven (a.k.a. Se7en) (1995)']\n",
+      "User 7 recommendations: ['Shawshank Redemption, The (1994)', 'Matrix, The (1999)', 'Pulp Fiction (1994)', 'Fight Club (1999)', 'Braveheart (1995)']\n",
+      "User 33 recommendations: ['Star Wars: Episode IV - A New Hope (1977)', 'Jurassic Park (1993)', 'Seven (a.k.a. Se7en) (1995)', 'Star Wars: Episode V - The Empire Strikes Back (1980)', 'Fight Club (1999)']\n",
+      "User 28 recommendations: ['Toy Story (1995)', 'Back to the Future (1985)', 'Shrek (2001)', 'Apollo 13 (1995)', 'Indiana Jones and the Last Crusade (1989)']\n",
+      "Group recommendations: ['Shawshank Redemption, The (1994)', 'Seven (a.k.a. Se7en) (1995)', 'Pulp Fiction (1994)', 'Matrix, The (1999)', \"Schindler's List (1993)\"]\n",
+      "Satisfaction scores: {45: 0.5, 11: 0.5, 7: 0.5, 33: 0.0, 28: 0.0}\n",
+      "\n",
+      "Iteration 2:\n",
+      "User 45 recommendations: ['Lord of the Rings: The Two Towers, The (2002)', 'Batman (1989)', 'Memento (2000)', 'Speed (1994)', 'Alien (1979)']\n",
+      "User 11 recommendations: ['Dances with Wolves (1990)', 'Batman (1989)', 'Usual Suspects, The (1995)', 'Toy Story (1995)', 'Aladdin (1992)']\n",
+      "User 7 recommendations: ['Raiders of the Lost Ark (Indiana Jones and the Raiders of the Lost Ark) (1981)', 'Saving Private Ryan (1998)', 'Godfather, The (1972)', 'Fugitive, The (1993)', 'Memento (2000)']\n",
+      "User 33 recommendations: ['American Beauty (1999)', 'Godfather, The (1972)', 'Raiders of the Lost Ark (Indiana Jones and the Raiders of the Lost Ark) (1981)', 'Dances with Wolves (1990)', 'Batman (1989)']\n",
+      "User 28 recommendations: ['Lion King, The (1994)', 'Groundhog Day (1993)', 'Aladdin (1992)', 'Inception (2010)', 'Finding Nemo (2003)']\n",
+      "Group recommendations: ['Batman (1989)', 'Raiders of the Lost Ark (Indiana Jones and the Raiders of the Lost Ark) (1981)', 'Godfather, The (1972)', 'Aladdin (1992)', 'Memento (2000)']\n",
+      "Satisfaction scores: {45: 0.0, 11: 0.0, 7: 1.0, 33: 0.5, 28: 0.0}\n",
+      "\n",
+      "Iteration 3:\n",
+      "User 45 recommendations: ['Reservoir Dogs (1992)', 'Aliens (1986)', 'Dark Knight, The (2008)', 'Kill Bill: Vol. 1 (2003)', 'Léon: The Professional (a.k.a. The Professional) (Léon) (1994)']\n",
+      "User 11 recommendations: ['Star Wars: Episode V - The Empire Strikes Back (1980)', 'Lion King, The (1994)', 'Twelve Monkeys (a.k.a. 12 Monkeys) (1995)', 'Fargo (1996)', 'Fight Club (1999)']\n",
+      "User 7 recommendations: ['Fargo (1996)', 'Lion King, The (1994)', 'Twelve Monkeys (a.k.a. 12 Monkeys) (1995)', 'Indiana Jones and the Last Crusade (1989)', 'Finding Nemo (2003)']\n",
+      "User 33 recommendations: ['True Lies (1994)', 'Lion King, The (1994)', 'Speed (1994)', 'Independence Day (a.k.a. ID4) (1996)', 'Lord of the Rings: The Fellowship of the Ring, The (2001)']\n",
+      "User 28 recommendations: [\"One Flew Over the Cuckoo's Nest (1975)\", 'Monsters, Inc. (2001)', 'Mission: Impossible (1996)', 'True Lies (1994)', \"Ocean's Eleven (2001)\"]\n",
+      "Group recommendations: ['Lion King, The (1994)', 'True Lies (1994)', 'Twelve Monkeys (a.k.a. 12 Monkeys) (1995)', 'Fargo (1996)', 'Reservoir Dogs (1992)']\n",
+      "Satisfaction scores: {45: 0.0, 11: 0.5, 7: 1.0, 33: 0.0, 28: 0.0}\n",
+      "\n",
+      "Iteration 4:\n",
+      "User 45 recommendations: [\"One Flew Over the Cuckoo's Nest (1975)\", 'Eternal Sunshine of the Spotless Mind (2004)', 'Incredibles, The (2004)', 'Beautiful Mind, A (2001)', 'Clockwork Orange, A (1971)']\n",
+      "User 11 recommendations: ['Stargate (1994)', 'Beauty and the Beast (1991)', 'American Beauty (1999)', 'Ace Ventura: Pet Detective (1994)', 'Back to the Future (1985)']\n",
+      "User 7 recommendations: ['Men in Black (a.k.a. MIB) (1997)', 'Dark Knight, The (2008)', 'Princess Bride, The (1987)', 'Monty Python and the Holy Grail (1975)', 'Groundhog Day (1993)']\n",
+      "User 33 recommendations: ['Back to the Future (1985)', 'Lord of the Rings: The Return of the King, The (2003)', 'Lord of the Rings: The Two Towers, The (2002)', 'Mission: Impossible (1996)', 'Gladiator (2000)']\n",
+      "User 28 recommendations: [\"Amelie (Fabuleux destin d'Amélie Poulain, Le) (2001)\", 'Shining, The (1980)', 'E.T. the Extra-Terrestrial (1982)', 'Indiana Jones and the Temple of Doom (1984)', \"Ferris Bueller's Day Off (1986)\"]\n",
+      "Group recommendations: ['Back to the Future (1985)', \"One Flew Over the Cuckoo's Nest (1975)\", 'Eternal Sunshine of the Spotless Mind (2004)', 'Incredibles, The (2004)', 'Beautiful Mind, A (2001)']\n",
+      "Satisfaction scores: {45: 0.5, 11: 0.0, 7: 0.5, 33: 0.0, 28: 0.0}\n",
+      "\n",
+      "Iteration 5:\n",
+      "User 45 recommendations: ['GoldenEye (1995)', 'Babe (1995)', 'Batman Begins (2005)', \"Amelie (Fabuleux destin d'Amélie Poulain, Le) (2001)\", 'Inception (2010)']\n",
+      "User 11 recommendations: ['Mask, The (1994)', 'Sixth Sense, The (1999)', 'Crimson Tide (1995)', 'Mrs. Doubtfire (1993)', 'Lord of the Rings: The Fellowship of the Ring, The (2001)']\n",
+      "User 7 recommendations: ['Die Hard (1988)', 'Good Will Hunting (1997)', 'Speed (1994)', 'Alien (1979)', 'Kill Bill: Vol. 1 (2003)']\n",
+      "User 33 recommendations: ['Princess Bride, The (1987)', 'Beauty and the Beast (1991)', 'Groundhog Day (1993)', 'Indiana Jones and the Last Crusade (1989)', 'Monty Python and the Holy Grail (1975)']\n",
+      "User 28 recommendations: ['Titanic (1997)', 'Mask, The (1994)', 'Beauty and the Beast (1991)', 'Breakfast Club, The (1985)', 'Die Hard: With a Vengeance (1995)']\n",
+      "Group recommendations: ['Mask, The (1994)', 'Beauty and the Beast (1991)', 'Titanic (1997)', 'Breakfast Club, The (1985)', 'Die Hard: With a Vengeance (1995)']\n",
+      "Satisfaction scores: {45: 0.0, 11: 0.0, 7: 0.0, 33: 0.0, 28: 0.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_item_matrix = ratings.pivot(index='userId', columns='movieId', values='rating').fillna(0)\n",
+    "\n",
+    "similarity_matrix = cosine_similarity(user_item_matrix)\n",
+    "similarity_df = pd.DataFrame(similarity_matrix, index=user_item_matrix.index, columns=user_item_matrix.index)\n",
+    "group_users = [45, 11, 7, 33, 28]\n",
+    "\n",
+    "# Satisfaction scores for the users (initially all unsatisfied)\n",
+    "satisfaction_scores = {user: 0.0 for user in group_users}\n",
+    "\n",
+    "# Keep track of movies already recommended for each user\n",
+    "user_history = {user: set() for user in group_users}\n",
+    "# Keep track of movies already recommended for each user\n",
+    "group_history = set() \n",
+    "\n",
+    "# Function to det movies' names\n",
+    "def get_movie_title(movie_id):\n",
+    "    title = movies[movies['movieId'] == movie_id]['title']\n",
+    "    return title.values[0] if not title.empty else \"Unknown\" \n",
+    "\n",
+    "def recommend_for_user(user_id, user_item_matrix, similarity_df, num_recommendations=5):\n",
+    "    # Cosine similarity-based recommendation\n",
+    "    similar_users = similarity_df[user_id].sort_values(ascending=False)\n",
+    "    user_rated_movies = user_item_matrix.loc[user_id]\n",
+    "    watched_movies = set(user_rated_movies[user_rated_movies > 0].index)\n",
+    "    scores = pd.Series(dtype=np.float64)\n",
+    "    \n",
+    "    for similar_user, similarity_score in similar_users.items():\n",
+    "        if similar_user == user_id:\n",
+    "            continue\n",
+    "        weighted_ratings = user_item_matrix.loc[similar_user] * similarity_score\n",
+    "        scores = scores.add(weighted_ratings, fill_value=0)\n",
+    "    \n",
+    "    # Tarkista, että jokainen joukko on alustettu ja ei-tyhjä\n",
+    "    watched_movies = watched_movies if watched_movies is not None else set()\n",
+    "    user_history[user_id] = user_history[user_id] if user_id in user_history else set()\n",
+    "    group_history_set = group_history if group_history else set()\n",
+    "\n",
+    "    # Poistetaan katsotut ja aiemmin suositellut elokuvat\n",
+    "    scores = scores[~scores.index.isin(watched_movies | user_history[user_id] | group_history_set)]\n",
+    "\n",
+    "    # Genre-matching adjustment\n",
+    "    user_ratings = ratings[ratings['userId'] == user_id]\n",
+    "    high_rated_movies = user_ratings[user_ratings['rating'] >= 4.0]['movieId']\n",
+    "    high_rated_genres = movies[movies['movieId'].isin(high_rated_movies)]['genres']\n",
+    "    user_genres = set([genre for genres in high_rated_genres for genre in genres.split('|')])\n",
+    "    \n",
+    "    # Adjust scores based on genre overlap\n",
+    "    for movie_id in scores.index:\n",
+    "        movie_genres = set(movies[movies['movieId'] == movie_id]['genres'].values[0].split('|'))\n",
+    "        genre_match = len(user_genres & movie_genres)\n",
+    "        scores[movie_id] += genre_match * 0.1  # Weight genre overlap\n",
+    "    \n",
+    "    # Return top recommendations\n",
+    "    recommended_movies = scores.sort_values(ascending=False).head(num_recommendations)\n",
+    "    \n",
+    "    # Päivitä käyttäjäkohtainen historia\n",
+    "    user_history[user_id].update(recommended_movies.index)\n",
+    "    \n",
+    "    return [(movie_id, score) for movie_id, score in recommended_movies.items()]\n",
+    "\n",
+    "\n",
+    "# Päivitetty aggregointi funktio\n",
+    "def aggregate_group_recommendations(user_recommendations, weights, max_recommendations=5):\n",
+    "    scores = defaultdict(float)\n",
+    "    for user, recommendations in user_recommendations.items():\n",
+    "        weight = weights[user]\n",
+    "        for movie_id, score in recommendations:\n",
+    "            scores[movie_id] += score * weight\n",
+    "    \n",
+    "    # Poistetaan ryhmän historiassa olevat elokuvat\n",
+    "    scores = {movie: score for movie, score in scores.items() if movie not in group_history}\n",
+    "    \n",
+    "    sorted_recommendations = sorted(scores.items(), key=lambda x: -x[1])\n",
+    "    top_recommendations = [movie for movie, _ in sorted_recommendations[:max_recommendations]]\n",
+    "    \n",
+    "    # Päivitetään ryhmähistoria\n",
+    "    group_history.update(top_recommendations)\n",
+    "    \n",
+    "    return top_recommendations\n",
+    "\n",
+    "# Simulointi useammalla kierroksella\n",
+    "num_iterations = 5\n",
+    "for iteration in range(1, num_iterations + 1):\n",
+    "    print(f\"\\nIteration {iteration}:\")\n",
+    "    \n",
+    "    user_recommendations = {}\n",
+    "    for user in group_users:\n",
+    "        user_recommendations[user] = recommend_for_user(user, user_item_matrix, similarity_df)\n",
+    "        movie_titles = [get_movie_title(movie_id) for movie_id, _ in user_recommendations[user]]\n",
+    "        print(f\"User {user} recommendations: {movie_titles}\")\n",
+    "    \n",
+    "    weights = {user: 1.0 + (1.0 - satisfaction_scores[user]) for user in group_users}\n",
+    "    group_recommendations = aggregate_group_recommendations(user_recommendations, weights)\n",
+    "    group_movie_titles = [get_movie_title(movie_id) for movie_id in group_recommendations]\n",
+    "    print(f\"Group recommendations: {group_movie_titles}\")\n",
+    "    \n",
+    "    for user in group_users:\n",
+    "        matched_recommendations = set([movie_id for movie_id, _ in user_recommendations[user]]) & set(group_recommendations)\n",
+    "        if len(matched_recommendations) >= 3:\n",
+    "            satisfaction_scores[user] = min(1.0, satisfaction_scores[user] + 0.5)\n",
+    "        else:\n",
+    "            satisfaction_scores[user] = max(0.0, satisfaction_scores[user] - 0.5)\n",
+    "    print(f\"Satisfaction scores: {satisfaction_scores}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
