--- a/projectpartfour.ipynb
+++ b/projectpartfour.ipynb
@@ -27,23 +27,381 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import jaccard_score\n",
+    "from scipy.spatial.distance import pdist, squareform\n",
+    "from itertools import combinations\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Links Dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>imdbId</th>\n",
+       "      <th>tmdbId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>114709</td>\n",
+       "      <td>862.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>113497</td>\n",
+       "      <td>8844.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>113228</td>\n",
+       "      <td>15602.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>114885</td>\n",
+       "      <td>31357.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>113041</td>\n",
+       "      <td>11862.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId  imdbId   tmdbId\n",
+       "0        1  114709    862.0\n",
+       "1        2  113497   8844.0\n",
+       "2        3  113228  15602.0\n",
+       "3        4  114885  31357.0\n",
+       "4        5  113041  11862.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Movies Dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>Adventure|Animation|Children|Comedy|Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jumanji (1995)</td>\n",
+       "      <td>Adventure|Children|Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
+       "      <td>Comedy|Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Waiting to Exhale (1995)</td>\n",
+       "      <td>Comedy|Drama|Romance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Father of the Bride Part II (1995)</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId                               title  \\\n",
+       "0        1                    Toy Story (1995)   \n",
+       "1        2                      Jumanji (1995)   \n",
+       "2        3             Grumpier Old Men (1995)   \n",
+       "3        4            Waiting to Exhale (1995)   \n",
+       "4        5  Father of the Bride Part II (1995)   \n",
+       "\n",
+       "                                        genres  \n",
+       "0  Adventure|Animation|Children|Comedy|Fantasy  \n",
+       "1                   Adventure|Children|Fantasy  \n",
+       "2                               Comedy|Romance  \n",
+       "3                         Comedy|Drama|Romance  \n",
+       "4                                       Comedy  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ratings Dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964981247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>964982224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>964983815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>964982931</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating  timestamp\n",
+       "0       1        1     4.0  964982703\n",
+       "1       1        3     4.0  964981247\n",
+       "2       1        6     4.0  964982224\n",
+       "3       1       47     5.0  964983815\n",
+       "4       1       50     5.0  964982931"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tags Dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>60756</td>\n",
+       "      <td>funny</td>\n",
+       "      <td>1445714994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>60756</td>\n",
+       "      <td>Highly quotable</td>\n",
+       "      <td>1445714996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>60756</td>\n",
+       "      <td>will ferrell</td>\n",
+       "      <td>1445714992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>89774</td>\n",
+       "      <td>Boxing story</td>\n",
+       "      <td>1445715207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>89774</td>\n",
+       "      <td>MMA</td>\n",
+       "      <td>1445715200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId              tag   timestamp\n",
+       "0       2    60756            funny  1445714994\n",
+       "1       2    60756  Highly quotable  1445714996\n",
+       "2       2    60756     will ferrell  1445714992\n",
+       "3       2    89774     Boxing story  1445715207\n",
+       "4       2    89774              MMA  1445715200"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total number of ratings: 100836\n"
+     ]
+    }
+   ],
    "source": [
     "links = pd.read_csv('ml-latest-small/links.csv')\n",
     "movies = pd.read_csv('ml-latest-small/movies.csv')\n",
-    "ratings = pd.read_csv('ml-latest-small/ratings.csv')\n",
+    "ratings_df = pd.read_csv('ml-latest-small/ratings.csv')\n",
     "tags = pd.read_csv('ml-latest-small/tags.csv')\n",
     "\n",
     "print(\"Links Dataset:\")\n",
@@ -64,6 +422,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Tie']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# Create item and user sets\n",
+    "item_set = set(ratings_df['movieId'].unique())\n",
+    "user_set = set(ratings_df['userId'].unique())\n",
+    "\n",
+    "# Rating scores in a dictionary format for fast lookup\n",
+    "rating_scores = ratings_df.groupby('userId').apply(\n",
+    "    lambda df: df[['movieId', 'rating']].set_index('movieId')['rating'].to_dict(), include_groups=False\n",
+    ").to_dict()\n",
+    "\n",
+    "# Function to calculate cosine similarity between users\n",
+    "def calculate_cosine_similarity(user_ratings, all_ratings):\n",
+    "    # Convert ratings to a user-item matrix\n",
+    "    user_item_matrix = all_ratings.pivot(index='userId', columns='movieId', values='rating').fillna(0)\n",
+    "    # Compute cosine similarity\n",
+    "    cosine_sim_matrix = cosine_similarity(user_item_matrix)\n",
+    "    return pd.DataFrame(cosine_sim_matrix, index=user_item_matrix.index, columns=user_item_matrix.index)\n",
+    "\n",
+    "# Get peers based on cosine similarity with a threshold\n",
+    "similarity_df = calculate_cosine_similarity(ratings_df, ratings_df)\n",
+    "user = 1\n",
+    "threshold = 0.8\n",
+    "peers = similarity_df.loc[user][similarity_df.loc[user] > threshold].index.tolist()\n",
+    "peers.remove(user)  # Remove the user themselves from the peers list\n",
+    "\n",
+    "# Define Moderate and Active Users\n",
+    "moderate_users = ratings_df['userId'].value_counts().loc[lambda x: (x >= 45) & (x <= 55)].index.tolist()\n",
+    "active_users = ratings_df['userId'].value_counts().loc[lambda x: (x >= 145) & (x <= 155)].index.tolist()\n",
+    "\n",
+    "# Define movie sets based on popularity\n",
+    "movie_popularity = ratings_df['movieId'].value_counts()\n",
+    "movies2k = movie_popularity.nsmallest(100).index.tolist()\n",
+    "movies4k = movie_popularity[movie_popularity.between(2000, 4000)].nlargest(100).index.tolist()\n",
+    "movies6k = movie_popularity[movie_popularity.between(4000, 6000)].nlargest(100).index.tolist()\n",
+    "movies8k = movie_popularity.nlargest(100).index.tolist()\n",
+    "\n",
+    "# Example relevance score function (dummy, replace with actual model output)\n",
+    "relevance_score_fn = lambda u, i: 3.5  # Dummy value\n",
+    "\n",
+    "# WNCF function as previously defined\n",
+    "def WNCF(item_set, user_set, user, why_not_question, rating_scores, recommendation_list, threshold_numP, peers, relevance_score_fn):\n",
+    "    # Initialize an explanation list\n",
+    "    e = []\n",
+    "    item = why_not_question[0]\n",
+    "\n",
+    "    # Step 1: Check if the item is in the item set\n",
+    "    if item not in item_set:\n",
+    "        e.append('I')\n",
+    "\n",
+    "    # Step 2: Check for ties with items already in the recommendation list\n",
+    "    elif any(relevance_score_fn(user, item) == relevance_score_fn(user, i0) and recommendation_list.index(i0) < len(recommendation_list)\n",
+    "             for i0 in recommendation_list):\n",
+    "        e.append('Tie')\n",
+    "\n",
+    "    # Step 3: Check if item is within the first 2k entries of an expanded recommendation list\n",
+    "    elif item in recommendation_list[:2 * len(recommendation_list)]:\n",
+    "        e.append('k')\n",
+    "\n",
+    "    # Step 4: Check if the item has no ratings in the score list\n",
+    "    elif item not in rating_scores:\n",
+    "        e.append('S')\n",
+    "\n",
+    "    # Step 5: Check if at least one peer of the user has rated the item\n",
+    "    elif any(peer in peers and item in rating_scores.get(peer, {}) for peer in peers):\n",
+    "        for peer in peers:\n",
+    "            if item in rating_scores.get(peer, {}):\n",
+    "                e.append((peer, rating_scores[peer][item], similarity_df.loc[user, peer]))\n",
+    "        if len([peer for peer in peers if item in rating_scores.get(peer, {})]) < threshold_numP:\n",
+    "            e.append('numP')\n",
+    "        if len([peer for peer in peers]) < threshold_numP:\n",
+    "            e.append('numPI')\n",
+    "\n",
+    "    # Step 6: Check if any user has rated the item\n",
+    "    else:\n",
+    "        for other_user in user_set:\n",
+    "            if item in rating_scores.get(other_user, {}):\n",
+    "                e.append((other_user, rating_scores[other_user][item], '-'))\n",
+    "        e.append('Peers')\n",
+    "\n",
+    "    # Return the explanation\n",
+    "    return e\n",
+    "\n",
+    "# Example usage\n",
+    "user = 1\n",
+    "recommendation_list = [1, 2, 3]  # Example movie IDs\n",
+    "threshold_numP = 3\n",
+    "why_not_question = (4,)  # Movie ID not in recommendation list\n",
+    "\n",
+    "explanation = WNCF(item_set, user_set, user, why_not_question, rating_scores, recommendation_list, threshold_numP, peers, relevance_score_fn)\n",
+    "print(explanation)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -71,8 +540,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "bbthti",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
