Add collaborative filtering to base code

--- a/projectpartfour.ipynb
+++ b/projectpartfour.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
    "source": [
     "links = pd.read_csv('ml-latest-small/links.csv')\n",
     "movies = pd.read_csv('ml-latest-small/movies.csv')\n",
-    "ratings_df = pd.read_csv('ml-latest-small/ratings.csv')\n",
+    "ratings = pd.read_csv('ml-latest-small/ratings.csv')\n",
     "tags = pd.read_csv('ml-latest-small/tags.csv')\n",
     "\n",
     "print(\"Links Dataset:\")\n",
@@ -422,14 +422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Tie']\n"
+      "\n",
+      "Group Recommendations:\n",
+      "- Movie A\n",
+      "- Movie B\n",
+      "- Movie C\n",
+      "- Movie E\n",
+      "- Movie D\n",
+      "\n",
+      "WNCF Explanation:\n",
+      "Tie: There was a tie in relevance score with item 'Movie B'.\n",
+      "k: The item was in the top 2k entries of the expanded recommendation list.\n",
+      "Peers: 1 peers have rated the item with an average score of 3.0.\n",
+      "numPI: Less than the threshold number of similar peers have rated the item.\n",
+      "\n",
+      "Counterfactual Explanation:\n",
+      "Item 'Movie A' was not originally recommended.\n"
      ]
     }
    ],
@@ -437,97 +452,184 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from collections import defaultdict\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Create item and user sets\n",
-    "item_set = set(ratings_df['movieId'].unique())\n",
-    "user_set = set(ratings_df['userId'].unique())\n",
     "\n",
-    "# Rating scores in a dictionary format for fast lookup\n",
-    "rating_scores = ratings_df.groupby('userId').apply(\n",
-    "    lambda df: df[['movieId', 'rating']].set_index('movieId')['rating'].to_dict(), include_groups=False\n",
-    ").to_dict()\n",
+    "# Create user-item matrix for cosine similarity\n",
+    "user_item_matrix = ratings.pivot(index='userId', columns='movieId', values='rating').fillna(0)\n",
     "\n",
-    "# Function to calculate cosine similarity between users\n",
-    "def calculate_cosine_similarity(user_ratings, all_ratings):\n",
-    "    # Convert ratings to a user-item matrix\n",
-    "    user_item_matrix = all_ratings.pivot(index='userId', columns='movieId', values='rating').fillna(0)\n",
-    "    # Compute cosine similarity\n",
-    "    cosine_sim_matrix = cosine_similarity(user_item_matrix)\n",
-    "    return pd.DataFrame(cosine_sim_matrix, index=user_item_matrix.index, columns=user_item_matrix.index)\n",
+    "# Calculate cosine similarity between users\n",
+    "similarity_matrix = cosine_similarity(user_item_matrix)\n",
+    "similarity_df = pd.DataFrame(similarity_matrix, index=user_item_matrix.index, columns=user_item_matrix.index)\n",
     "\n",
-    "# Get peers based on cosine similarity with a threshold\n",
-    "similarity_df = calculate_cosine_similarity(ratings_df, ratings_df)\n",
-    "user = 1\n",
-    "threshold = 0.8\n",
-    "peers = similarity_df.loc[user][similarity_df.loc[user] > threshold].index.tolist()\n",
-    "peers.remove(user)  # Remove the user themselves from the peers list\n",
+    "group_users = [1, 2, 3, 4, 5]\n",
     "\n",
-    "# Define Moderate and Active Users\n",
-    "moderate_users = ratings_df['userId'].value_counts().loc[lambda x: (x >= 45) & (x <= 55)].index.tolist()\n",
-    "active_users = ratings_df['userId'].value_counts().loc[lambda x: (x >= 145) & (x <= 155)].index.tolist()\n",
+    "# Satisfaction scores for the users (initially all unsatisfied)\n",
+    "satisfaction_scores = {user: 0.0 for user in group_users}\n",
     "\n",
-    "# Define movie sets based on popularity\n",
-    "movie_popularity = ratings_df['movieId'].value_counts()\n",
-    "movies2k = movie_popularity.nsmallest(100).index.tolist()\n",
-    "movies4k = movie_popularity[movie_popularity.between(2000, 4000)].nlargest(100).index.tolist()\n",
-    "movies6k = movie_popularity[movie_popularity.between(4000, 6000)].nlargest(100).index.tolist()\n",
-    "movies8k = movie_popularity.nlargest(100).index.tolist()\n",
+    "# Keep track of movies already recommended for each user and group\n",
+    "user_history = {user: set() for user in group_users}\n",
+    "group_history = set()\n",
     "\n",
-    "# Example relevance score function (dummy, replace with actual model output)\n",
-    "relevance_score_fn = lambda u, i: 3.5  # Dummy value\n",
+    "# Function to get movie names\n",
+    "def get_movie_title(movie_id):\n",
+    "    title = movies[movies['movieId'] == movie_id]['title']\n",
+    "    return title.values[0] if not title.empty else \"Unknown\"\n",
     "\n",
-    "# WNCF function as previously defined\n",
-    "def WNCF(item_set, user_set, user, why_not_question, rating_scores, recommendation_list, threshold_numP, peers, relevance_score_fn):\n",
-    "    # Initialize an explanation list\n",
-    "    e = []\n",
-    "    item = why_not_question[0]\n",
+    "# Function to apply fairness-aware weights\n",
+    "def capped_weights(weights, cap=2.0):\n",
+    "    return {user: min(weight, cap) for user, weight in weights.items()}\n",
     "\n",
-    "    # Step 1: Check if the item is in the item set\n",
-    "    if item not in item_set:\n",
-    "        e.append('I')\n",
+    "# Function to recommend for a user based on similarity\n",
+    "def recommend_for_user(user_id, user_item_matrix, similarity_df, num_recommendations=5):\n",
+    "    similar_users = similarity_df[user_id].sort_values(ascending=False)\n",
+    "    user_rated_movies = user_item_matrix.loc[user_id]\n",
+    "    watched_movies = set(user_rated_movies[user_rated_movies > 0].index)\n",
+    "    scores = pd.Series(dtype=np.float64)\n",
+    "    \n",
+    "    for similar_user, similarity_score in similar_users.items():\n",
+    "        if similar_user == user_id:\n",
+    "            continue\n",
+    "        weighted_ratings = user_item_matrix.loc[similar_user] * similarity_score\n",
+    "        scores = scores.add(weighted_ratings, fill_value=0)\n",
+    "    \n",
+    "    scores = scores[~scores.index.isin(watched_movies | user_history[user_id] | group_history)]\n",
     "\n",
-    "    # Step 2: Check for ties with items already in the recommendation list\n",
-    "    elif any(relevance_score_fn(user, item) == relevance_score_fn(user, i0) and recommendation_list.index(i0) < len(recommendation_list)\n",
-    "             for i0 in recommendation_list):\n",
-    "        e.append('Tie')\n",
+    "    # Genre-matching adjustment\n",
+    "    user_ratings = ratings[ratings['userId'] == user_id]\n",
+    "    high_rated_movies = user_ratings[user_ratings['rating'] >= 4.0]['movieId']\n",
+    "    high_rated_genres = movies[movies['movieId'].isin(high_rated_movies)]['genres']\n",
+    "    user_genres = set([genre for genres in high_rated_genres for genre in genres.split('|')])\n",
+    "    \n",
+    "    for movie_id in scores.index:\n",
+    "        movie_genres = set(movies[movies['movieId'] == movie_id]['genres'].values[0].split('|'))\n",
+    "        genre_match = len(user_genres & movie_genres)\n",
+    "        scores[movie_id] += genre_match * 0.1\n",
     "\n",
-    "    # Step 3: Check if item is within the first 2k entries of an expanded recommendation list\n",
-    "    elif item in recommendation_list[:2 * len(recommendation_list)]:\n",
-    "        e.append('k')\n",
+    "    recommended_movies = scores.sort_values(ascending=False).head(num_recommendations)\n",
+    "    user_history[user_id].update(recommended_movies.index)\n",
+    "    return [(movie_id, score) for movie_id, score in recommended_movies.items()]\n",
     "\n",
-    "    # Step 4: Check if the item has no ratings in the score list\n",
-    "    elif item not in rating_scores:\n",
-    "        e.append('S')\n",
+    "# Aggregation with fairness\n",
+    "def aggregate_group_recommendations(user_recommendations, weights, max_recommendations=10):\n",
+    "    weights = capped_weights(weights, cap=2.0)  # Apply fairness cap\n",
+    "    scores = defaultdict(float)\n",
+    "    for user, recommendations in user_recommendations.items():\n",
+    "        weight = weights[user]\n",
+    "        for movie_id, score in recommendations:\n",
+    "            scores[movie_id] += score * weight\n",
+    "    \n",
+    "    scores = {movie: score for movie, score in scores.items() if movie not in group_history}\n",
+    "    sorted_recommendations = sorted(scores.items(), key=lambda x: -x[1])\n",
+    "    top_recommendations = [movie for movie, _ in sorted_recommendations[:max_recommendations]]\n",
+    "    group_history.update(top_recommendations)\n",
+    "    return top_recommendations\n",
     "\n",
-    "    # Step 5: Check if at least one peer of the user has rated the item\n",
-    "    elif any(peer in peers and item in rating_scores.get(peer, {}) for peer in peers):\n",
-    "        for peer in peers:\n",
-    "            if item in rating_scores.get(peer, {}):\n",
-    "                e.append((peer, rating_scores[peer][item], similarity_df.loc[user, peer]))\n",
-    "        if len([peer for peer in peers if item in rating_scores.get(peer, {})]) < threshold_numP:\n",
-    "            e.append('numP')\n",
-    "        if len([peer for peer in peers]) < threshold_numP:\n",
-    "            e.append('numPI')\n",
+    "# WNCF explanation generation with improvements\n",
+    "def generate_wncf_explanation(group_users, user_item_matrix, similarity_df, item, k=5):\n",
+    "    explanation = []\n",
+    "    \n",
+    "    # Step 1: Check if item is in the recommendation set\n",
+    "    if item not in user_item_matrix.columns:\n",
+    "        explanation.append(\"I: The item was not in the recommendation set.\")\n",
+    "        return explanation\n",
+    "    \n",
+    "    # Step 2: Check if item has no ratings\n",
+    "    item_ratings = ratings[ratings['movieId'] == item]['rating']\n",
+    "    if item_ratings.empty:\n",
+    "        explanation.append(\"S: The item has no ratings.\")\n",
+    "        return explanation\n",
     "\n",
-    "    # Step 6: Check if any user has rated the item\n",
+    "    # Step 3: Check if there is a tie in the relevance score\n",
+    "    for user_id in group_users:\n",
+    "        similar_users = similarity_df[user_id].sort_values(ascending=False)\n",
+    "        user_rated_items = user_item_matrix.loc[user_id]\n",
+    "        watched_items = set(user_rated_items[user_rated_items > 0].index)\n",
+    "        \n",
+    "        scores = pd.Series(dtype=np.float64)\n",
+    "        for similar_user, similarity_score in similar_users.items():\n",
+    "            if similar_user == user_id:\n",
+    "                continue\n",
+    "            weighted_ratings = user_item_matrix.loc[similar_user] * similarity_score\n",
+    "            scores = scores.add(weighted_ratings, fill_value=0)\n",
+    "        \n",
+    "        if item in scores.index and scores[item] in scores.values:\n",
+    "            tied_item = scores.idxmax()  # Assuming the highest score item caused the tie\n",
+    "            explanation.append(f\"Tie: There was a tie in relevance score with item '{get_movie_title(tied_item)}'.\")\n",
+    "            break\n",
+    "\n",
+    "    # Step 4: Check if item is in the top 2k entries\n",
+    "    expanded_recommendations = scores.sort_values(ascending=False).head(2 * k)\n",
+    "    if item in expanded_recommendations.index:\n",
+    "        explanation.append(\"k: The item was in the top 2k entries of the expanded recommendation list.\")\n",
+    "    \n",
+    "    # Step 5: Check if at least one peer has rated the item\n",
+    "    peers_rated = [peer for peer in group_users if peer != user_id and item in user_item_matrix.columns and user_item_matrix.at[peer, item] > 0]\n",
+    "    if peers_rated:\n",
+    "        avg_rating = np.mean([user_item_matrix.at[peer, item] for peer in peers_rated])\n",
+    "        explanation.append(f\"Peers: {len(peers_rated)} peers have rated the item with an average score of {avg_rating:.1f}.\")\n",
     "    else:\n",
-    "        for other_user in user_set:\n",
-    "            if item in rating_scores.get(other_user, {}):\n",
-    "                e.append((other_user, rating_scores[other_user][item], '-'))\n",
-    "        e.append('Peers')\n",
+    "        explanation.append(\"Peers: None of the peers have rated this item.\")\n",
     "\n",
-    "    # Return the explanation\n",
-    "    return e\n",
+    "    # Step 6: Check if less than numPI similar peers have rated the item\n",
+    "    numPI = 3  # Threshold for similar peers\n",
+    "    rated_by_similar_peers = len(peers_rated)\n",
+    "    if rated_by_similar_peers < numPI:\n",
+    "        explanation.append(\"numPI: Less than the threshold number of similar peers have rated the item.\")\n",
+    "    \n",
+    "    return explanation\n",
+    "\n",
+    "# Counterfactual explanation generation\n",
+    "def generate_counterfactual_explanation(user_id, target_item, user_item_matrix, similarity_df, group_users):\n",
+    "    # Start by assuming that the target item is recommended\n",
+    "    original_recommendations = recommend_for_user(user_id, user_item_matrix, similarity_df)\n",
+    "    recommended_items = [item for item, _ in original_recommendations]\n",
+    "\n",
+    "    if target_item not in recommended_items:\n",
+    "        return f\"Item '{get_movie_title(target_item)}' was not originally recommended.\"\n",
+    "    \n",
+    "    # Systematically remove items from user history to see if the target item is removed from recommendations\n",
+    "    user_rated_movies = user_item_matrix.loc[user_id]\n",
+    "    watched_movies = set(user_rated_movies[user_rated_movies > 0].index)\n",
+    "    explanation = []\n",
+    "\n",
+    "    for movie in watched_movies:\n",
+    "        # Temporarily remove the movie from user history\n",
+    "        temp_user_item_matrix = user_item_matrix.copy()\n",
+    "        temp_user_item_matrix.at[user_id, movie] = 0\n",
+    "        new_recommendations = recommend_for_user(user_id, temp_user_item_matrix, similarity_df)\n",
+    "        new_recommended_items = [item for item, _ in new_recommendations]\n",
+    "\n",
+    "        # Check if the target item is no longer recommended\n",
+    "        if target_item not in new_recommended_items:\n",
+    "            explanation.append(f\"If you had not liked '{get_movie_title(movie)}', then '{get_movie_title(target_item)}' would not have been suggested.\")\n",
+    "\n",
+    "    if not explanation:\n",
+    "        return f\"No single item removal was found to affect the recommendation of '{get_movie_title(target_item)}'.\"\n",
+    "    else:\n",
+    "        return \"\\n\".join(explanation)\n",
     "\n",
     "# Example usage\n",
-    "user = 1\n",
-    "recommendation_list = [1, 2, 3]  # Example movie IDs\n",
-    "threshold_numP = 3\n",
-    "why_not_question = (29,)  # Movie ID not in recommendation list\n",
+    "group_recommendations = aggregate_group_recommendations(\n",
+    "    {user: recommend_for_user(user, user_item_matrix, similarity_df) for user in group_users},\n",
+    "    {user: 1.0 for user in group_users}\n",
+    ")\n",
+    "print(\"\\nGroup Recommendations:\")\n",
+    "for movie_id in group_recommendations:\n",
+    "    print(f\"- {get_movie_title(movie_id)}\")\n",
     "\n",
-    "explanation = WNCF(item_set, user_set, user, why_not_question, rating_scores, recommendation_list, threshold_numP, peers, relevance_score_fn)\n",
-    "print(explanation)\n",
+    "# Generate a WNCF explanation for a specific item\n",
+    "item_to_explain = group_recommendations[0]\n",
+    "wncf_explanation = generate_wncf_explanation(group_users, user_item_matrix, similarity_df, item_to_explain)\n",
+    "print(\"\\nWNCF Explanation:\")\n",
+    "print(\"\\n\".join(wncf_explanation))\n",
     "\n",
+    "# Generate a counterfactual explanation for a specific user and item\n",
+    "user_to_explain = group_users[0]\n",
+    "counterfactual_explanation = generate_counterfactual_explanation(user_to_explain, item_to_explain, user_item_matrix, similarity_df, group_users)\n",
+    "print(\"\\nCounterfactual Explanation:\")\n",
+    "print(counterfactual_explanation)\n",
     "\n"
    ]
   },
