--- a/projectpartfour.ipynb
+++ b/projectpartfour.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,16 @@
       "If several group members had not liked 'Fugitive, The (1993)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Fugitive, The (1993)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
       "If several group members had not liked 'Schindler's List (1993)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Schindler's List (1993)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
       "If several group members had not liked 'Fargo (1996)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Fargo (1996)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
-      "If several group members had not liked 'Toy Story (1995)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Toy Story (1995)' had a significant influence on recommending 'Forrest Gump (1994)'.\n"
+      "If several group members had not liked 'Toy Story (1995)', then 'Forrest Gump (1994)' would not have been suggested. This shows that 'Toy Story (1995)' had a significant influence on recommending 'Forrest Gump (1994)'.\n",
+      "\n",
+      "Advanced Explanations:\n",
+      "- Genre 'Comedy' is preferred by the group (Avg rating: 3.71).\n",
+      "- Genre 'Drama' is preferred by the group (Avg rating: 3.65).\n",
+      "- Genre 'Romance' is preferred by the group (Avg rating: 3.46).\n",
+      "- Genre 'War' is preferred by the group (Avg rating: 3.71).\n",
+      "- Tie: There was a tie in relevance score with item 'Aliens (1986)', which indicates multiple items had similar relevance to user preferences.\n",
+      "- Peers: None of the peers have rated this item, indicating a potential gap in group interest.\n",
+      "- numPI: Less than the threshold number of similar peers have rated the item, suggesting limited relevance among users with similar preferences.\n"
      ]
     }
    ],
@@ -637,20 +646,132 @@
     "group_counterfactual_explanation = generate_counterfactual_group_explanation(group_users, item_to_explain, user_item_matrix, similarity_df)\n",
     "print(\"\\nCounterfactual Group Explanation:\")\n",
     "print(group_counterfactual_explanation)\n",
-    "\n"
+    "\n",
+    "\n",
+    "# Function to get movie details\n",
+    "def get_movie_details(movie_id):\n",
+    "    movie_row = movies[movies['movieId'] == movie_id]\n",
+    "    if not movie_row.empty:\n",
+    "        title = movie_row['title'].values[0]\n",
+    "        genres = movie_row['genres'].values[0]\n",
+    "        return title, genres\n",
+    "    return \"Unknown\", \"Unknown\"\n",
+    "\n",
+    "# Genre-level reasoning\n",
+    "def genre_preferences_reasoning(group_users, ratings, movies):\n",
+    "    \"\"\"\n",
+    "    Calculate group preferences for genres based on ratings.\n",
+    "    \"\"\"\n",
+    "    group_ratings = ratings[ratings['userId'].isin(group_users)]\n",
+    "    genre_scores = defaultdict(float)\n",
+    "    genre_counts = defaultdict(int)\n",
+    "\n",
+    "    for _, row in group_ratings.iterrows():\n",
+    "        movie_id = row['movieId']\n",
+    "        rating = row['rating']\n",
+    "        _, genres = get_movie_details(movie_id)\n",
+    "\n",
+    "        for genre in genres.split('|'):\n",
+    "            genre_scores[genre] += rating\n",
+    "            genre_counts[genre] += 1\n",
+    "\n",
+    "    # Calculate average ratings for each genre\n",
+    "    avg_genre_scores = {genre: genre_scores[genre] / genre_counts[genre] for genre in genre_scores}\n",
+    "    return avg_genre_scores\n",
+    "\n",
+    "# Dependency reasoning\n",
+    "def dependency_reasoning(movie_id, similarity_df, top_k=5):\n",
+    "    \"\"\"\n",
+    "    Explain why a movie was recommended by analyzing its dependencies (similar movies).\n",
+    "    \"\"\"\n",
+    "    reasoning = []\n",
+    "    similar_items = similarity_df.loc[movie_id].sort_values(ascending=False).head(top_k)\n",
+    "    for similar_item, similarity_score in similar_items.items():\n",
+    "        title, _ = get_movie_details(similar_item)\n",
+    "        reasoning.append(\n",
+    "            f\"Movie '{title}' is similar to '{get_movie_details(movie_id)[0]}' (Similarity: {similarity_score:.2f}).\"\n",
+    "        )\n",
+    "    return reasoning\n",
+    "\n",
+    "# Peer-based collaborative filtering reasoning\n",
+    "def peer_reasoning(group_users, movie_id, user_item_matrix, similarity_df):\n",
+    "    \"\"\"\n",
+    "    Explain recommendations based on peer ratings and similarities.\n",
+    "    \"\"\"\n",
+    "    reasoning = []\n",
+    "    for user in group_users:\n",
+    "        similar_users = similarity_df[user].sort_values(ascending=False).head(5)  # Top 5 similar users\n",
+    "        for peer, similarity in similar_users.items():\n",
+    "            if peer == user:\n",
+    "                continue\n",
+    "            peer_rating = user_item_matrix.at[peer, movie_id]\n",
+    "            if peer_rating > 0:\n",
+    "                reasoning.append(\n",
+    "                    f\"Peer {peer} rated '{get_movie_details(movie_id)[0]}' {peer_rating} (Similarity: {similarity:.2f}).\"\n",
+    "                )\n",
+    "    return reasoning\n",
+    "\n",
+    "# Granularity in explanations\n",
+    "def granularity_explanation(movie_id, genre_preferences, common_watched_movies):\n",
+    "    \"\"\"\n",
+    "    Provide explanations at both atomic and group levels.\n",
+    "    \"\"\"\n",
+    "    explanations = []\n",
+    "\n",
+    "    # Genre-level insights\n",
+    "    _, genres = get_movie_details(movie_id)\n",
+    "    for genre in genres.split('|'):\n",
+    "        if genre in genre_preferences:\n",
+    "            explanations.append(f\"Genre '{genre}' is preferred by the group (Avg rating: {genre_preferences[genre]:.2f}).\")\n",
+    "\n",
+    "    # Group-level insights\n",
+    "    if movie_id in common_watched_movies:\n",
+    "        explanations.append(f\"'{get_movie_details(movie_id)[0]}' was commonly watched by group members.\")\n",
+    "\n",
+    "    return explanations\n",
+    "\n",
+    "# Enhanced recommendation explanations\n",
+    "def generate_advanced_explanations(group_users, user_item_matrix, similarity_df, ratings, movies, target_item):\n",
+    "    \"\"\"\n",
+    "    Generate a comprehensive explanation for group recommendations.\n",
+    "    \"\"\"\n",
+    "    # Calculate genre preferences and commonly watched movies\n",
+    "    genre_preferences = genre_preferences_reasoning(group_users, ratings, movies)\n",
+    "    common_watched_movies = get_common_watched_movies(group_users, user_item_matrix)\n",
+    "\n",
+    "    # Build explanations\n",
+    "    explanations = []\n",
+    "\n",
+    "    # Peer reasoning\n",
+    "    explanations.extend(peer_reasoning(group_users, target_item, user_item_matrix, similarity_df))\n",
+    "\n",
+    "    # Dependency reasoning\n",
+    "    explanations.extend(dependency_reasoning(target_item, similarity_df))\n",
+    "\n",
+    "    # Granularity explanation\n",
+    "    explanations.extend(granularity_explanation(target_item, genre_preferences, common_watched_movies))\n",
+    "\n",
+    "    # Model-specific tie-breaking explanation\n",
+    "    tie_break_explanation = generate_wncf_explanation(group_users, user_item_matrix, similarity_df, target_item)\n",
+    "    explanations.extend(tie_break_explanation)\n",
+    "\n",
+    "    return explanations\n",
+    "\n",
+    "# Example Usage\n",
+    "item_to_explain = group_recommendations[0]\n",
+    "advanced_explanations = generate_advanced_explanations(\n",
+    "    group_users, user_item_matrix, similarity_df, ratings, movies, item_to_explain\n",
+    ")\n",
+    "\n",
+    "print(\"\\nAdvanced Explanations:\")\n",
+    "for explanation in advanced_explanations:\n",
+    "    print(f\"- {explanation}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bbthti",
+   "display_name": "recsys",
    "language": "python",
    "name": "python3"
   },
@@ -664,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
